<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicy"
    android:orientation="vertical"
    android:layout_weight="4"
    android:background="@color/white"
    >
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="Wallpapper Changer"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy"
                android:text="Privacy Policy"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/policy1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:gravity="fill"
                android:text="@string/privacyPolicyText"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy1"
                android:text="Infromation Collection and Use"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/policy2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/infromatinCollectionText"
                android:textColor="@color/black"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy2"
                android:text="Log Data"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/policy3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/logDataText"
                android:textColor="@color/black"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy22"
                android:text="Cookies"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/policy333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/cookiesText"
                android:textColor="@color/black"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy2222"
                android:text="Service Providers"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/policy3333"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/serviceProvidersText"
                android:textColor="@color/black"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy22222"
                android:text="Security"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/policy3353"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/securityText"
                android:textColor="@color/black"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy28"
                android:text="Links To Others Sites"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/policy38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/linkToOtherAppsText"
                android:textColor="@color/black"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy25"
                android:text="Children's Privacy"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/policy83"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/childPrivacyText"
                android:textColor="@color/black"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy882"
                android:text="Change To This Privacy Policy"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/policy93"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/changePrivacyPolicyText"
                android:textColor="@color/black"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:id="@+id/privacy8882"
                android:text="Contact Us"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="24dp" />
            <TextView
                android:id="@+id/policy938"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/privacy"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="6dp"
                android:layout_marginTop="20dp"
                android:text="@string/contactText"
                android:textColor="@color/black"
                android:textSize="19sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>